🏂📟 Checkpoint ./server.js:8362896/4206 ./src/pages/index.hbs:8362896/102

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -24,6 +24,10 @@
         >~glitch-hello-node</a
       >.
     </p>
+    
+    <form>
+      <input placeholder="Enter URL" />
+    </form>
         
   </body>
 </html>
