💼⏲ Checkpoint ./src/pages/index.hbs:8362896/8 ./server.js:8362896/648 ./package.json:8362896/28

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -26,7 +26,7 @@
     </p>
     
     <form>
-      <input placeholder="Enter URL" />
+      <input name="url" placeholder="Enter URL" />
     </form>
         
   </body>
