🍘👋 Checkpoint ./server.js:8362896/10373 ./src/pages/index.hbs:8362896/79

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -25,8 +25,11 @@
       >.
     </p>
     
-    <form>
+    <form action="/fetchURL">
       <input name="url" placeholder="Enter URL" />
+      <button type="submit">
+        Submit
+      </button>
     </form>
         
   </body>
