--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -25,7 +25,7 @@
       >.
     </p>
     
-    <form action="/fetchURL">
+    <form action="/fetchURL" method="GET">
       <input name="url" placeholder="Enter URL" />
       <button type="submit">
         Submit
