🔔👍 Checkpoint ./server.js:8362896/6453 ./src/pages/index.hbs:8362896/288

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -26,10 +26,13 @@
     </p>
     
     <form action="/fetchURL" method="GET">
-      <input name="url" placeholder="Enter URL" />
-      <button type="submit">
-        Submit
-      </button>
+      <div>
+        <input name="url" placeholder="Enter URL" size="50" />
+        <button type="submit">
+          Submit
+        </button>
+      </div>
+    
     </form>
         
   </body>
