🗽🌨 Checkpoint ./src/pages/index.hbs:8362896/225 ./public/script.js:8362896/523

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -8,7 +8,8 @@
     <title>Hello Node!</title>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />   
+    <link rel="stylesheet" href="/style.css" /> 
+    <script src="script.js"></script>
   </head>
   <body>
     
@@ -24,7 +25,9 @@
         >~glitch-hello-node</a
       >.
     </p>
-    
+    <div>
+      
+
     <form action="/fetchURL" method="GET">
       <div>
         <input name="url" placeholder="Enter URL" size="50" />
@@ -34,6 +37,10 @@
       </div>
     
     </form>
+          </div>
+    
+    <iframe src={{ur }} frameborder="0" id="website"></iframe>
+
         
   </body>
 </html>
