😬🍗 Checkpoint ./src/pages/index.hbs:8362896/73 ./server.js:8362896/598

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -39,7 +39,7 @@
     </form>
           </div>
     
-    <iframe src={{ur }} frameborder="0" id="website"></iframe>
+    <iframe src="{{ urlResponse }}" frameborder="0" id="website"></iframe>
 
         
   </body>
