✈️🚪 Checkpoint ./public/script.js:8362896/8274 ./src/pages/index.hbs:8362896/48

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -28,7 +28,7 @@
     <div>
       
 
-    <form action="/fetchURL" method="GET">
+    <form id="url-submit">
       <div>
         <input name="url" placeholder="Enter URL" size="50" />
         <button type="submit">
