--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -9,8 +9,7 @@
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" /> 
-    <script src="node_modules/axios/dist/axios.min.js"></script>
-    <script src="node_modules/axios/dist/axios.min.map"></script>
+   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
