💋📕 Checkpoint ./public/script.js:8362896/8300 ./src/pages/index.hbs:8362896/148

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -40,8 +40,9 @@
     </form>
           </div>
     
-    <iframe src="{{ urlResponse }}" frameborder="0" id="website"></iframe>
-
+    <div id="data">
+      
+    </div>
         
   </body>
 </html>
