🏑🍴 Checkpoint ./public/script.js:8362896/9635 ./src/pages/index.hbs:8362896/1265

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -19,12 +19,18 @@
       {{ greeting }}
     </h1>
     <p>
-      This starter gives you everything you need to start working on a new
-      project using Node. If you're looking for something a little more 
-      opinionated, try remixing
-      <a href="https://glitch.com/edit/#!/remix/glitch-hello-node"
-        >~glitch-hello-node</a
-      >.
+      Try this API's
+      <ul>
+        <li>        dungeons and dragons: ﻿https://www.dnd5eapi.co/api/spells﻿
+</li><li>
+        pokemon:https://pokeapi.co/api/v2/pokemon/?limit=811﻿
+
+        </li>
+        <li>star wars: ﻿https://swapi.dev/api/people/?format=json
+</li>
+
+
+    </ul>
     </p>
     <div>
       
