🍖🚂 Checkpoint ./src/pages/index.hbs:8362896/629 ./server.js:8362896/430

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -14,21 +14,34 @@
   </head>
   <body>
     
-    <!-- this is the start of content -->
     <h1>
       {{ greeting }}
     </h1>
     <p>
-      Try this API's
+      Try these API's
       <ul>
-        <li>        dungeons and dragons: ﻿https://www.dnd5eapi.co/api/spells﻿
+        <li>        dungeons and dragons: https://www.dnd5eapi.co/api/spells﻿
 </li><li>
-        pokemon:https://pokeapi.co/api/v2/pokemon/?limit=811﻿
+        pokemon:https://pokeapi.co/api/v2/pokemon/?limit=811
 
         </li>
-        <li>star wars: ﻿https://swapi.dev/api/people/?format=json
+        <li>star wars: https://swapi.dev/api/people/?format=json
 </li>
 
+    </ul>
+    </p>
+  
+     <p>
+      Try these URL's
+      <ul>
+        <li>        Cloudinary: https://www.cloudinary.com
+</li><li>
+        Amazon: https://www.amazon.com
+
+        </li>
+        <li>Google: https://www.google.com
+          
+</li>
 
     </ul>
     </p>
