--- a/src/pages/cldapi.hbs
+++ b/src/pages/cldapi.hbs
@@ -5,7 +5,7 @@
     <link rel="icon" href="https://glitch.com/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>APIs and URLs</title>
+    <title>Cloudinary API</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" /> 
@@ -18,33 +18,17 @@
       {{ greeting }}
     </h1>
     <p>
-      Try these API's
+      Try a Cloudinary API
       <ul>
-        <li>        dungeons and dragons: https://www.dnd5eapi.co/api/spells﻿
-</li><li>
-        pokemon:https://pokeapi.co/api/v2/pokemon/?limit=811
-
+        <li>        
+          dungeons and dragons: https://<API_KEY>:<API_SECRET>@api.cloudinary.com/v1_1/<CLOUD_NAME>/resources/image
         </li>
-        <li>star wars: https://swapi.dev/api/people/?format=json
-</li>
+        
 
     </ul>
     </p>
   
-     <p>
-      Try these URL's
-      <ul>
-        <li>        Cloudinary: https://www.cloudinary.com
-</li><li>
-        Amazon: https://www.amazon.com
-
-        </li>
-        <li>Google: https://www.google.com
-          
-</li>
-
-    </ul>
-    </p>
+    
     <div>
       
 
