--- a/src/pages/cldapi.hbs
+++ b/src/pages/cldapi.hbs
@@ -21,10 +21,9 @@
       Try a Cloudinary API
       <ul>
         <li>        
-          dungeons and dragons: https://<API_KEY>:<API_SECRET>@api.cloudinary.com/v1_1/<CLOUD_NAME>/resources/image
+          resources: https://<API_KEY>:<API_SECRET>@api.cloudinary.com/v1_1/<CLOUD_NAME>/resources/image
         </li>
         
-
     </ul>
     </p>
   
@@ -32,9 +31,13 @@
     <div>
       
 
-    <form id="url-submit">
+    <form id="cld-url">
       <div>
         <input name="url" placeholder="Enter URL" size="50" />
+        <br>
+        <label>Paste CLOUDINARY_URL</label>
+        <input type="password" placeholder="Paste CLOUDINARY_URL"/>
+        <br>
         <button type="submit">
           Submit
         </button>
