--- a/src/pages/cldapi.hbs
+++ b/src/pages/cldapi.hbs
@@ -22,7 +22,7 @@
       Try a Cloudinary API
       <ul>
         <li>        
-          resources: https://&lt;API_KEY&gt;:&lt;PI_SECRET&gt;@api.cloudinary.com/v1_1/%ltCLOUD_NAME>/resources/image
+          resources: https://API_KEY:API_SECRET@api.cloudinary.com/v1_1/CLOUD_NAME/resources/image
         </li>
         
     </ul>
