🚁🚔 Checkpoint ./public/script.js:8362896/46538 ./src/pages/cldapi.hbs:8362896/77

--- a/src/pages/cldapi.hbs
+++ b/src/pages/cldapi.hbs
@@ -35,8 +35,8 @@
     <form id="cld-url">
       <div>
         <input name="url" placeholder="Enter URL" size="50" />
-        <br>
-        <input type="password" placeholder="Paste CLOUDINARY_URL" size="50"/>
+        <br> 
+        <input name="cldurl" type="password" placeholder="Paste CLOUDINARY_URL" value="CLOUDINARY_URL=cloudinary://apikeyapisecret@cloudname" size="50"/>
         <br>
         <button type="submit">
           Submit
