🌻🐁 Checkpoint ./src/pages/cldapi.hbs:8362896/269 ./public/script.js:8362896/16

--- a/src/pages/cldapi.hbs
+++ b/src/pages/cldapi.hbs
@@ -34,9 +34,9 @@
 
     <form id="cld-url">
       <div>
-        <input name="url" placeholder="Enter URL" size="50" />
+        <input name="url" placeholder="Enter URL" size="100" value="https://API_KEY:API_SECRET@api.cloudinary.com/v1_1/CLOUD_NAME/resources/image" />
         <br> 
-        <input name="cldurl" type="password" placeholder="Paste CLOUDINARY_URL" value="CLOUDINARY_URL=cloudinary://apikeyapisecret@cloudname" size="50"/>
+        <input name="cldurl" type="password" placeholder="Paste CLOUDINARY_URL" value="CLOUDINARY_URL=cloudinary://apikey:apisecret@cloudname" size="100"/>
         <br>
         <button type="submit">
           Submit
