👷🏈 Checkpoint ./src/pages/index.hbs:8362896/65 ./src/pages/cldapi.hbs:8362896/91

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -13,13 +13,13 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <nav><a </nav>
+    <nav><a href="/cldapi">Cloudinary API</a></nav>
     
     <h1>
-      {{ greeting }}
+      APIs and URs
     </h1>
     <p>
-      Try these API's
+      Try these APIs
       <ul>
         <li>        dungeons and dragons: https://www.dnd5eapi.co/api/spells﻿
 </li><li>
@@ -33,7 +33,7 @@
     </p>
   
      <p>
-      Try these URL's
+      Try these URLs
       <ul>
         <li>        Cloudinary: https://www.cloudinary.com
 </li><li>
