--- a/src/pages/cldapi.hbs
+++ b/src/pages/cldapi.hbs
@@ -14,7 +14,8 @@
     <script src="script.js"></script>
   </head>
   <body>
-    
+        <nav><a href="/">APIs and URLs</a></nav>
+
     <h1>
       {{ greeting }}
     </h1>
