🎋🚗 Checkpoint ./src/pages/index.hbs:8362896/1

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -16,7 +16,7 @@
     <nav><a href="/cldapi">Cloudinary API</a></nav>
     
     <h1>
-      APIs and URs
+      APIs and URLs
     </h1>
     <p>
       Try these APIs
