--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -8,61 +7,62 @@
     <title>APIs and URLs</title>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" /> 
-   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="/style.css" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
     <nav><a href="/cldapi">Cloudinary API</a></nav>
-    
+
     <h1>
       APIs and URLs
     </h1>
-    <p>
+    <div>
       Try these APIs
       <ul>
-        <li>        dungeons and dragons: https://www.dnd5eapi.co/api/spells﻿
-</li><li>
-        pokemon:https://pokeapi.co/api/v2/pokemon/?limit=811
+        <li>
+          dungeons and dragons: https://www.dnd5eapi.co/api/spells﻿
+        </li><li>
+          pokemon:https://pokeapi.co/api/v2/pokemon/?limit=811
 
         </li>
         <li>star wars: https://swapi.dev/api/people/?format=json
-</li>
+        </li>
 
-    </ul>
-    </p>
-  
-     <p>
+      </ul>
+    </div>
+
+    <div>
       Try these URLs
       <ul>
-        <li>        Cloudinary: https://www.cloudinary.com
-</li><li>
-        Amazon: https://www.amazon.com
+        <li>
+          Cloudinary: https://www.cloudinary.com
+        </li><li>
+          Amazon: https://www.amazon.com
 
         </li>
         <li>Google: https://www.google.com
-          
-</li>
 
-    </ul>
-    </p>
-    <div>
-      
+        </li>
 
-    <form id="url-submit">
-      <div>
-        <input name="url" placeholder="Enter URL" size="50" />
-        <button type="submit">
-          Submit
-        </button>
-      </div>
-    
-    </form>
-          </div>
-    
-    <div id="data">
-      
+      </ul>
     </div>
-        
+    <div>
+
+      <form id="url-submit">
+        <div>
+          <input name="url" placeholder="Enter URL" size="50" />
+          <button type="submit">
+            Submit
+          </button>
+        </div>
+
+      </form>
+    </div>
+
+    <div id="data">
+
+    </div>
+
   </body>
 </html>
