--- a/src/pages/cldapi.hbs
+++ b/src/pages/cldapi.hbs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -8,53 +7,71 @@
     <title>Cloudinary API</title>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" /> 
-   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    
+    <link rel="stylesheet" href="/style.css" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <script src="script.js"></script>
   </head>
   <body>
-        <nav><a href="/">APIs and URLs</a></nav>
+    <nav><a href="/">APIs and URLs</a></nav>
 
     <h1>
-      {{ greeting }}
+      {{greeting}}
     </h1>
-    <p>
-      Try a Cloudinary API.  The Admin API <strong>/resources</strong> endpoint will return 10 the most
-      recently uploaded assets. <br>
-      You can specify <strong>video</strong> or <strong>image</strong> as the last part of the path.
-      <ul>
-        <li>        
-           image resources: https://API_KEY:API_SECRET@api.cloudinary.com/v1_1/CLOUD_NAME/resources/image
-        </li>
-           <li>        
-          video resources: https://API_KEY:API_SECRET@api.cloudinary.com/v1_1/CLOUD_NAME/resources/video
-        </li>
-        
-    </ul>
-    </p>
-  
-    
     <div>
-      
+      Try a Cloudinary API. The Admin API
+      <strong>/resources</strong>
+      endpoint will return 10 the most recently uploaded assets.
+      <br />
+      You can specify
+      <strong>video</strong>
+      or
+      <strong>image</strong>
+      as the last part of the path.
+      <ul>
+        <li>
+          image resources:
+          https://API_KEY:API_SECRET@api.cloudinary.com/v1_1/CLOUD_NAME/resources/image
+        </li>
+        <li>
+          video resources:
+          https://API_KEY:API_SECRET@api.cloudinary.com/v1_1/CLOUD_NAME/resources/video
+        </li>
 
-    <form id="cld-url">
-      <div>
-        <input name="url" placeholder="Enter URL" size="100" value="https://API_KEY:API_SECRET@api.cloudinary.com/v1_1/CLOUD_NAME/resources/image" />
-        <br> 
-        <input name="cldurl" id="cldurl" type="password" placeholder="Paste CLOUDINARY_URL" value="" size="100"/>
-        <br>
-        <button type="submit">
-          Submit
-        </button>
-      </div>
-    
-    </form>
-          </div>
-    
-    <div id="data">
-      
+      </ul>
     </div>
-        
+
+    <div>
+
+      <form id="cld-url">
+        <div>
+          <input
+            name="url"
+            placeholder="Enter URL"
+            size="100"
+            value="https://API_KEY:API_SECRET@api.cloudinary.com/v1_1/CLOUD_NAME/resources/image"
+          />
+          <br />
+          <input
+            name="cldurl"
+            id="cldurl"
+            type="password"
+            placeholder="Paste CLOUDINARY_URL"
+            value=""
+            size="100"
+          />
+          <br />
+          <button type="submit">
+            Submit
+          </button>
+        </div>
+
+      </form>
+    </div>
+
+    <div id="data">
+
+    </div>
+
   </body>
 </html>
