--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -21,10 +21,10 @@
       Try these APIs
       <ul>
         <li>
-          dungeons and dragons: https://www.dnd5eapi.co/api/spells﻿
-        </li><li>
+          dungeons and dragons: https://www.dnd5eapi.co/api/spells
+        </li>
+        <li>
           pokemon:https://pokeapi.co/api/v2/pokemon/?limit=811
-
         </li>
         <li>star wars: https://swapi.dev/api/people/?format=json
         </li>
@@ -37,9 +37,9 @@
       <ul>
         <li>
           Cloudinary: https://www.cloudinary.com
-        </li><li>
+        </li>
+        <li>
           Amazon: https://www.amazon.com
-
         </li>
         <li>Google: https://www.google.com
 
